refactor: make QueryExpression DataSerializable
Signed-off-by: SettingDust <settingdust@gmail.com>